map repair and footer changes

--- a/source/style/blog_content.scss
+++ b/source/style/blog_content.scss
@@ -1,6 +1,7 @@
 .blog {
     background-color: rgb(250, 248, 240);
     height: 100%;
+    padding-bottom: 250px;
 
 .blog-menu {
     vertical-align: top;
@@ -38,8 +39,4 @@ h2 {
 }
 }
 }
-}
-
-.footer-template {
-    margin-top: 50px;
 }
