--- a/source/template/includes/_skills-content.pug
+++ b/source/template/includes/_skills-content.pug
@@ -62,4 +62,5 @@
           svg.circle(width='120' height='120')
             circle(transform='rotate(-90)', r='50', cx='-60', cy='60')
             circle(transform='rotate(-90)', style='stroke-dasharray: 90px 314px;', r='50', cx='-60', cy='60')
-#map
+
+include map
