--- a/source/style/blog_content.css
+++ b/source/style/blog_content.css
@@ -1,6 +1,7 @@
 .blog {
   background-color: #faf8f0;
-  height: 100%; }
+  height: 100%;
+  padding-bottom: 250px; }
   .blog .blog-menu {
     vertical-align: top;
     display: inline-block;
@@ -27,8 +28,5 @@
         color: #a2be92; }
       .blog .blog-content li .blog-content-text {
         margin: 0; }
-
-.footer-template {
-  margin-top: 50px; }
 
 /*# sourceMappingURL=blog_content.css.map */
