--- a/source/template/includes/_blog-header.pug
+++ b/source/template/includes/_blog-header.pug
@@ -7,6 +7,7 @@
         i.fa.fa-github-alt(aria-hidden="true")
       a.in(href="#")
         i.fa.fa-linkedin(aria-hidden="true")
+    include _menu
   .avatar-block
     img.photo(src="assets/img/fashmark-men-trends-nature.png", alt="Logo")
     h1.name Блог
