--- a/source/template/main_template.pug
+++ b/source/template/main_template.pug
@@ -11,6 +11,7 @@ html(lang="en")
     //link(rel='stylesheet' href='/assets/css/app.css')
     link(rel='stylesheet' href='assets/css/normalize.css')
     link(href="assets/css/main.css", rel="stylesheet")
+    link(href="assets/css/menu.css", rel="stylesheet")
     link(rel='stylesheet', href='../bower_components/font-awesome/css/font-awesome.css')
     script(src='assets/js/foundation.js' defer)
     script(src='assets/js/app.js' defer)
