z-index for menu

--- a/source/template/includes/_menu.pug
+++ b/source/template/includes/_menu.pug
@@ -13,7 +13,7 @@ button.header-about__menu.toggle-menu
       a.screen-menu__link(href='./skills-new.html')
         .subtitle Обо мне
     .screen-menu__row
-      a.screen-menu__link(href='./blog.html')
+      a.screen-menu__link(href='./blog-new.html')
         .subtitle Блог
     .screen-menu__row
       a.screen-menu__link(href='./index.html')
