--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -13,36 +13,39 @@ body
     a.autorize-btn(href="#") Авторизоваться
   .wrapper
     .content
-      .hello-form
-        img.photo(src="img/", alt="Logo")
-        p.name Александр Прикотов
-        p.sitetitle Личный сайт веб-разработчика
-        .social-btns
-          a.vk(href="#")
-            i.fa.fa-vk(aria-hidden="true")
-          a.git(href="#")
-            i.fa.fa-github-alt(aria-hidden="true")
-          a.in(href="#")
-            i.fa.fa-linkedin(aria-hidden="true")
-        .btns
-          a.myworks(href="#") Мои работы
-          a.aboutme(href="#") Обо мне
-          a.blog(href="#") Блог
-      .register-form
-        p.name Авторизуйтесь
-          hr.horizontal-line
-        input.register-form-login(type='text', placeholder='Логин')
-        input.register-form-pass(type='password', placeholder='Пароль')
-        label(for='captcha')
-          input#captcha(type='checkbox')
-          | Я человек
-        p.captcha-question Вы точно не робот?
-        input(type='radio', name='yesno', value='1')
-        | Да
-        input(type='radio', name='yesno', value='0')
-        | Не уверен
-        .btns
-          .main-page-btn На главную
-          .sign-in-btn Войти
+      label
+        input.card-rotate(type='checkbox')
+        .card
+          .front
+            img.photo(src="img/", alt="Logo")
+            p.name Александр Прикотов
+            p.sitetitle Личный сайт веб-разработчика
+            .social-btns
+              a.vk(href="#")
+                i.fa.fa-vk(aria-hidden="true")
+              a.git(href="#")
+                i.fa.fa-github-alt(aria-hidden="true")
+              a.in(href="#")
+                i.fa.fa-linkedin(aria-hidden="true")
+            .btns
+              a.myworks(href="#") Мои работы
+              a.aboutme(href="#") Обо мне
+              a.blog(href="#") Блог
+          .back
+            p.name Авторизуйтесь
+              hr.horizontal-line
+            input.register-form-login(type='text', placeholder='Логин')
+            input.register-form-pass(type='password', placeholder='Пароль')
+            label(for='captcha')
+              input#captcha(type='checkbox')
+              | Я человек
+            p.captcha-question Вы точно не робот?
+            input(type='radio', name='yesno', value='1')
+            | Да
+            input(type='radio', name='yesno', value='0')
+            | Не уверен
+            .btns
+              .main-page-btn На главную
+              .sign-in-btn Войти
   footer
     p.copyright Секретный ингредиент: чуточка любви!
