--- a/source/style/menu.scss
+++ b/source/style/menu.scss
@@ -277,3 +277,11 @@
     transform: translateX(0);
   }
 }
+
+.header-about__menu {
+  outline: none;
+}
+
+.screen-menu__link {
+  text-decoration: none;
+}
