--- a/source/style/main.css
+++ b/source/style/main.css
@@ -5,8 +5,10 @@ html {
     background-size: 100% 100%;
     min-height: 100%;
     padding: 0;
-    margin: 0; }
+    margin: 0;
+    z-index: -1; }
     html body .wrapper {
+      min-height: 100%;
       position: relative; }
     html body .wrapper:after {
       display: table;
