--- a/source/style/myworks_content.scss
+++ b/source/style/myworks_content.scss
@@ -1,7 +1,7 @@
 .my-work {
+  z-index: 10;
   background-image: url('../img/form_back.png');
   background-position-y: -600px;
-
 
   &:after {
     display: table;
@@ -12,7 +12,7 @@
     text-align: center;
     font-size: 63px;
     line-height: 63px;
-
+    z-index: 11;
   }
 
   .horizontal-line {
@@ -35,25 +35,22 @@
     .description {
       float: left;
       position: relative;
-      display: inline-block;
+      display: table-cell;
+      text-align: center;
+      vertical-align: middle;
       width: 50%;
       min-height: 750px;
       background-color: rgb(235, 239, 226);
 
       .description-inner {
-        position: absolute;
-        top: 50%;
-        left: 0;
-        right: 0;
-        bottom: 50%;
-        text-align: center;
+        display: inline-block;
 
-        &:before {
-          height: 100%;
-          content: "";
-          display: inline-block;
-          vertical-align: middle;
-        }
+        //&:before {
+        //  height: 100%;
+        //  content: "";
+        //  display: inline-block;
+        //  vertical-align: middle;
+        //}
         .work-title {
           width: 360px;
           margin: 0 auto;
