--- a/source/style/skills_content.css
+++ b/source/style/skills_content.css
@@ -15,13 +15,13 @@
       display: table;
       clear: both;
       content: ""; }
-    .skills .content-left .aboutme-block {
+    .skills .content-left .aboutme {
       float: left;
       position: relative;
       display: inline-block;
       width: 50%;
       min-height: 750px; }
-      .skills .content-left .aboutme-block .page-title {
+      .skills .content-left .aboutme .aboutme__title {
         text-align: center;
         color: #373e42;
         font-size: 63px;
@@ -30,25 +30,25 @@
         background-position: 40px -20px;
         background-size: 80%;
         background-repeat: no-repeat; }
-    .skills .content-left .description-block {
+    .skills .content-left .aboutme-description {
       float: left;
       position: relative;
       display: inline-block;
       width: 50%;
       min-height: 830px; }
-      .skills .content-left .description-block img {
+      .skills .content-left .aboutme-description .aboutme-description__image {
         margin-top: 15px;
         margin-right: 20px;
         width: 100%;
         height: auto; }
-      .skills .content-left .description-block .description-block-title {
+      .skills .content-left .aboutme-description .aboutme-description__title {
         text-align: center;
         font-size: 35px;
         line-height: 35px;
         color: #566358; }
-        .skills .content-left .description-block .description-block-title .horizontal-line {
+        .skills .content-left .aboutme-description .aboutme-description__title .horizontal-line {
           background-color: #566358; }
-      .skills .content-left .description-block .skills-about-me {
+      .skills .content-left .aboutme-description .aboutme-description__description {
         font-size: 16px;
         line-height: 1.5; }
   .skills .content-right {
@@ -58,20 +58,20 @@
     width: 50%;
     min-height: 830px;
     background-color: #f4f5f0; }
-    .skills .content-right .my-skills {
+    .skills .content-right .skills-items__title {
       text-align: center;
       font-size: 35px;
       line-height: 35px;
       color: #566358; }
-      .skills .content-right .my-skills .horizontal-line {
+      .skills .content-right .skills-items__title .horizontal-line {
         background-color: #566358; }
-    .skills .content-right .my-skills-description {
+    .skills .content-right .skills-items__description {
       font-size: 16px;
       line-height: 1.5;
       color: #566358;
       text-align: center;
       padding: 0 20px; }
-    .skills .content-right .skills-frontend {
+    .skills .content-right .skills-items__section-title {
       margin-left: 30px;
       font-size: 28px;
       line-height: 28px;
