--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -1,29 +1,29 @@
 html {
-    height: 100%;
-    body {
-      background: url('../img/back.png') no-repeat;
-      background-size: 100% 100%;
+  height: 100%;
+  body {
+    //  background: url('../img/back.png') no-repeat;
+    background-size: 100% 100%;
+    min-height: 100%;
+    padding: 0;
+    margin: 0;
+    z-index: -1;
+
+    .wrapper {
       min-height: 100%;
-      padding: 0;
-      margin: 0;
-      z-index: -1;
-
-      .wrapper {
-        min-height: 100%;
       position: relative;
-      }
+    }
 
-      .wrapper:after {
+    .wrapper:after {
       display: table;
       clear: both;
       content: "";
-      }
+    }
 
-    }
-    p {
-      margin: 0;
-      padding: 0;
-    }
+  }
+  p {
+    margin: 0;
+    padding: 0;
+  }
 
 }
 
