--- a/source/style/skills_content.scss
+++ b/source/style/skills_content.scss
@@ -21,14 +21,14 @@
       content: "";
     }
 
-    .aboutme-block {
+    .aboutme {
       float: left;
       position: relative;
       display: inline-block;
       width: 50%;
       min-height: 750px;
 
-      .page-title {
+      .aboutme__title {
         text-align: center;
         color: rgb(55, 62, 66);
         font-size: 63px;
@@ -41,20 +41,20 @@
       }
 
     }
-    .description-block {
+    .aboutme-description {
       float: left;
       position: relative;
       display: inline-block;
       width: 50%;
       min-height: 830px;
 
-      img {
+      .aboutme-description__image {
         margin-top: 15px;
         margin-right: 20px;
         width: 100%;
         height: auto;
       }
-      .description-block-title {
+      .aboutme-description__title {
         text-align: center;
         font-size: 35px;
         line-height: 35px;
@@ -64,7 +64,7 @@
           background-color: rgb(86, 99, 88);
         }
       }
-      .skills-about-me {
+      .aboutme-description__description {
         font-size: 16px;
         line-height: 1.5;
       }
@@ -79,7 +79,7 @@
     min-height: 830px;
     background-color: rgb(244, 245, 240);
 
-    .my-skills {
+    .skills-items__title {
       text-align: center;
       font-size: 35px;
       line-height: 35px;
@@ -89,7 +89,7 @@
         background-color: rgb(86, 99, 88);
       }
     }
-    .my-skills-description {
+    .skills-items__description {
       font-size: 16px;
       line-height: 1.5;
       color: rgb(86, 99, 88);
@@ -97,7 +97,7 @@
       padding: 0 20px;
 
     }
-    .skills-frontend {
+    .skills-items__section-title {
       margin-left: 30px;
       font-size: 28px;
       line-height: 28px;
