--- a/source/style/skills_header.scss
+++ b/source/style/skills_header.scss
@@ -1,8 +1,9 @@
 
 .promo {
   color: white;
-
-  .down-arrow {
+  background: url('../img/back.png') no-repeat;
+  -o-background-size: cover;
+  .avatar__down-arrow {
     display: block;
     text-align: center;
     margin: 0 auto;
@@ -31,7 +32,7 @@
     clear: both;
     content: "";
   }
-  .social-btns {
+  .socials {
     margin-bottom: 38px;
     float: left;
 
@@ -48,12 +49,12 @@
   }
 }
 
-.avatar-block {
+.avatar {
   text-align: center;
   color: white;
   height: 80px;
 
-  .photo {
+  .avatar__photo {
     border-radius: 50%;
     width: 145px;
     height: 145px;
@@ -61,13 +62,13 @@
     margin-bottom: 15px;
   }
 
-  .name {
+  .avatar__name {
     font-size: 28px;
     line-height: 28px;
     margin-bottom: 10px;
     margin-top: 0;
   }
-  .sitetitle {
+  .avatar__site-title {
     font-size: 16px;
     line-height: 16px;
     margin-top: 0;
