--- a/source/template/includes/_skills-header.pug
+++ b/source/template/includes/_skills-header.pug
@@ -1,18 +1,18 @@
 .promo
   header.myworks-header
-    .social-btns
-      a.vk(href="#")
+    .socials
+      a.socials__vk(href="#")
         i.fa.fa-vk(aria-hidden="true")
-      a.git(href="#")
+      a.socials__git(href="#")
         i.fa.fa-github-alt(aria-hidden="true")
-      a.in(href="#")
+      a.socials__in(href="#")
         i.fa.fa-linkedin(aria-hidden="true")
     include _menu
-  .avatar-block
-    img.photo(src="assets/img/fashmark-men-trends-nature.png", alt="Logo")
-    p.name Александр Прикотов
-    p.sitetitle Личный сайт веб-разработчика
-    img.down-arrow(src='assets/img/arrow_down.png', alt='down')
+  .avatar
+    img.avatar__photo(src="assets/img/fashmark-men-trends-nature.png", alt="Logo")
+    p.avatar__name Александр Прикотов
+    p.avatar__site-title Личный сайт веб-разработчика
+    img.avatar__down-arrow(src='assets/img/arrow_down.png', alt='down')
   .box
     svg.triangle(xmlns="http://www.w3.org/2000/svg", viewbox="0 0 1000 85", preserveaspectratio="none")
       polygon(points="0,0   0,86   500.8,86   500.8,75.5")
