--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -9,10 +9,10 @@ head
   link(rel='stylesheet', href='../bower_components/font-awesome/css/font-awesome.css')
 
 body
+  .real-bg
   header
     a.autorize-btn(href="#") Авторизоваться
   .wrapper
-    .content
       label.flip-card
         input.card-rotate(type='checkbox')
         .card
@@ -28,9 +28,9 @@ body
               a.in(href="#")
                 i.fa.fa-linkedin(aria-hidden="true")
             .btns
-              a.myworks(href="#") Мои работы
-              a.aboutme(href="#") Обо мне
-              a.blog(href="#") Блог
+              a.myworks(href='myworks-new.html') Мои работы
+              a.aboutme(href='skills-new.html') Обо мне
+              a.blog(href='./blog-new.html') Блог
           .back
             p.name Авторизуйтесь
               hr.horizontal-line
