--- a/source/style/main.css
+++ b/source/style/main.css
@@ -1,11 +1,9 @@
 html {
   height: 100%; }
   html body {
-    background-size: 100% 100%;
     min-height: 100%;
     padding: 0;
-    margin: 0;
-    z-index: -1; }
+    margin: 0; }
     html body .wrapper {
       min-height: 100%;
       position: relative; }
