--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -2,11 +2,10 @@ html {
   height: 100%;
   body {
     //  background: url('../img/back.png') no-repeat;
-    background-size: 100% 100%;
+    //background-size: 100% 100%;
     min-height: 100%;
     padding: 0;
     margin: 0;
-    z-index: -1;
 
     .wrapper {
       min-height: 100%;
