--- a/source/style/register.css
+++ b/source/style/register.css
@@ -1,3 +1,15 @@
+.real-bg {
+  width: 100%;
+  height: 120%;
+  background: url("../img/back.png") 0 0 no-repeat;
+  background-position: center top;
+  -webkit-background-size: cover;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; }
+
 header {
   width: 100%;
   padding: 0;
@@ -20,7 +32,7 @@ header {
     border: 1px solid white; }
 
 .front {
-  width: 380px;
+  width: 35%;
   height: 400px;
   margin: 15vh auto 0 auto;
   text-align: center;
@@ -81,7 +93,7 @@ header {
       width: 130px; }
 
 .back {
-  width: 380px;
+  width: 35%;
   height: 428px;
   margin: 15vh auto 0 auto;
   text-align: center;
