--- a/source/style/main.css
+++ b/source/style/main.css
@@ -1,12 +1,11 @@
 html {
   height: 100%; }
   html body {
-    min-height: 100%;
+    height: 100%;
     padding: 0;
     margin: 0; }
     html body .wrapper {
-      min-height: 100%;
-      position: relative; }
+      min-height: 100%; }
     html body .wrapper:after {
       display: table;
       clear: both;
