--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -1,15 +1,13 @@
 html {
   height: 100%;
   body {
-    //  background: url('../img/back.png') no-repeat;
-    //background-size: 100% 100%;
-    min-height: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
 
     .wrapper {
       min-height: 100%;
-      position: relative;
+
     }
 
     .wrapper:after {
