--- a/source/style/register.scss
+++ b/source/style/register.scss
@@ -1,6 +1,11 @@
+.wrapper {
+  min-height: 100%;
+  margin-bottom: -50px;
+}
+
 .real-bg {
   width: 100%;
-  height: 120%;
+  height: 100%;
   background: url('../img/back.png') 0 0 no-repeat;
   background-position: center top;
   -webkit-background-size: cover;
@@ -39,7 +44,7 @@ header {
 .front {
   width: 35%;
   height: 400px;
-  margin: 15vh auto 0 auto;
+  margin: 110px auto 0 auto;
   text-align: center;
   background-color: rgba(31, 52, 48, 0.6);
 
@@ -122,7 +127,7 @@ header {
 .back {
   width: 35%;
   height: 428px;
-  margin: 15vh auto 0 auto;
+  margin: 110px auto 0 auto;
   text-align: center;
   background-color: rgba(31, 52, 48, 0.6);
 
@@ -148,28 +153,61 @@ header {
     display: block;
     font-size: 16px;
   }
+
+  .register-form-login-fa {
+    background-color: rgb(240, 239, 233);
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    left: 20px;
+    right: 0;
+    line-height: 45px;
+    text-align: center;
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+  }
+
+  .fa-user,
+  .fa-key {
+    color: rgb(196, 203, 205);
+  }
+
   input, label {
     font-size: 16px;
   }
 
-  .register-form-login,
-  .register-form-pass {
-    width: 320px;
+  .register-form-login__input,
+  .register-form-pass__input {
+    width: 285px;
     height: 45px;
-    margin: 0 auto;
-    border-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
     font-size: 16px;
     line-height: 45px;
     border: none;
+    margin-left: 35px;
     padding: 0 0 0 20px;
     outline: none;
   }
 
   .register-form-login {
+    margin: 0 auto;
     margin-bottom: 20px;
   }
   .register-form-pass {
+    margin: 0 auto;
     margin-bottom: 20px;
+  }
+
+  #yes-in:not(checked),
+  #no-in:not(checked) {
+    position: absolute;
+    top: 0;
+    left: -9999px;
+  }
+
+  #captcha:not(checked) {
+    display: none;
   }
 
   label[for="captcha"],
@@ -177,11 +215,78 @@ header {
     color: white;
   }
 
+  label[for="captcha"] {
+    line-height: 20px;
+
+  }
+
+  label[for="captcha"]:before {
+    content: "";
+    display: inline-block;
+    position:relative;
+    top: 0;
+    left: -10px;
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    background-color: rgb(108, 156, 90);
+  }
+  .captcha-checkbox {
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+
+  #captcha:checked + label:before {
+    content: "\2713";
+    padding: 0;
+    color: whitesmoke;
+    text-align: center;
+  }
+
+
 
   label[for="yes-in"],
   label[for="no-in"] {
     color: white;
+    padding-left: 25px;
+  }
 
+  .captcha-question-radio {
+    margin-bottom: 40px;
+    height: 20px;
+  }
+
+
+  label[for="yes-in"]:before,
+  label[for="no-in"]:before {
+    content: "";
+    display: inline-block;
+    position:relative;
+    top: 5px;
+    left: -10px;
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background-color: white;
+  }
+
+  .captcha-question-radio input[type="radio"]:checked + label:before {
+    content: "";
+    display: inline-block;
+    position:relative;
+    top: 5px;
+    left: -10px;
+    width: 10px;
+    height: 10px;
+    margin-left: 10px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid white;
+    background-color: rgb(108, 156, 90);
   }
 
   label[for='captcha'] {
@@ -194,10 +299,6 @@ header {
 
   input[name='yesno'] {
     margin-bottom: 40px;
-  }
-
-  #captcha {
-    margin-bottom: 20px;
   }
 
   .btns {
@@ -227,15 +328,11 @@ header {
 }
 
 footer {
-  position: absolute;
   width: 100%;
   height: 50px;
-  left: 0;
-  bottom: 0;
   color: white;
   text-align: center;
 }
-
 
 //переворот карточки
 
@@ -280,7 +377,7 @@ footer {
   display: none;
 }
 
-:checked + .card {
+.card-rotate:checked + .card {
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
 }
