blog slide menu

--- a/source/style/blog_content.css
+++ b/source/style/blog_content.css
@@ -29,4 +29,7 @@
       .blog .blog-content li .blog-content-text {
         margin: 0; }
 
+.fixed {
+  position: fixed; }
+
 /*# sourceMappingURL=blog_content.css.map */
