--- a/source/style/skills_content.css
+++ b/source/style/skills_content.css
@@ -86,11 +86,12 @@
         margin-left: 50px;
         display: inline-block; }
         .skills .content-right .skills-circles .circle-wrap .circle-text {
-          width: 100px;
-          height: 50px;
+          width: auto;
+          font-size: 14px;
+          /* height: 50px; */
           position: absolute;
-          left: 0;
-          top: 0;
+          left: 20%;
+          top: 36%;
           bottom: 0;
           right: 0;
           white-space: normal;
