--- a/source/template/includes/_blog-content.pug
+++ b/source/template/includes/_blog-content.pug
@@ -1,12 +1,22 @@
+.real-bg
 .content
+  .fixed
+    .container
+      .left__col
+      .right__col
   .blog
-    .blog-menu
-      ul.blog-nav
-        li Первая
-        li Вторая
-        li Третья
-        li Четвертая
-    .blog-content
+    .left__col
+      .blog-menu
+        ul.blog-nav
+          li
+            a.blog-nav__link Первая
+          li
+            a.blog-nav__link Вторая
+          li
+            a.blog-nav__link Третья
+          li
+            a.blog-nav__link Четвертая
+    .blog-content.right__col
       ul.blog-news
         li
           h2 Первая
