--- a/source/style/main.css
+++ b/source/style/main.css
@@ -6,6 +6,17 @@ html {
     margin: 0; }
     html body .wrapper {
       min-height: 100%; }
+      html body .wrapper .real-bg {
+        width: 100%;
+        height: 100%;
+        background: url("../img/back.png") 0 0 no-repeat;
+        background-position: center top;
+        -webkit-background-size: cover;
+        background-size: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1; }
     html body .wrapper:after {
       display: table;
       clear: both;
