--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -7,7 +7,18 @@ html {
 
     .wrapper {
       min-height: 100%;
-
+      .real-bg {
+        width: 100%;
+        height: 100%;
+        background: url('../img/back.png') 0 0 no-repeat;
+        background-position: center top;
+        -webkit-background-size: cover;
+        background-size: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+      }
     }
 
     .wrapper:after {
@@ -15,7 +26,6 @@ html {
       clear: both;
       content: "";
     }
-
   }
   p {
     margin: 0;
