--- a/source/style/blog_content.scss
+++ b/source/style/blog_content.scss
@@ -3,6 +3,9 @@
     height: 100%;
     padding-bottom: 250px;
 
+    .left__col {
+        display: inline;
+    }
 .blog-menu {
     vertical-align: top;
     display: inline-block;
