--- a/source/style/blog_content.css
+++ b/source/style/blog_content.css
@@ -2,6 +2,8 @@
   background-color: #faf8f0;
   height: 100%;
   padding-bottom: 250px; }
+  .blog .left__col {
+    display: inline; }
   .blog .blog-menu {
     vertical-align: top;
     display: inline-block;
