--- a/source/style/blog_content.scss
+++ b/source/style/blog_content.scss
@@ -2,7 +2,9 @@
     background-color: rgb(250, 248, 240);
     height: 100%;
     padding-bottom: 250px;
-
+    .fixed-blog-side {
+        position: fixed;
+    }
     .left__col {
         display: inline;
     }
